--- a/02_assignments/assignment_1.ipynb
+++ b/02_assignments/assignment_1.ipynb
@@ -56,32 +56,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
     "def anagram_checker(word_a, word_b):\n",
     "  # Your code here\n",
-    "\n",
+    "  if len(word_a)==len(word_b):   #checking the length of two words if same or not\n",
+    "    for x in word_a:     # using for loop to iterate characters from word_a to word_b\n",
+    "      a = x.upper() in word_b.upper() #creating a boolean variable and assigning the result of check\n",
+    "      if a == False:\n",
+    "          return False \n",
+    "          break   #break is added to end the loop if we get one false\n",
+    "    return True  # all characters match \n",
+    "  else: \n",
+    "    return False  #count doesn't match so returning false\n",
+    "      \n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Slient\", \"listen\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Slient\", \"Night\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"night\", \"Thing\")"
    ]
@@ -97,22 +139,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
     "  # Modify your existing code here\n",
+    "  if len(word_a)==len(word_b):   #checking the length of two words if same or not\n",
+    "    if not is_case_sensitive:   #when it is not case sensitive\n",
+    "      for x in word_a:   # using for loop to iterate characters from word_a to word_b\n",
+    "        a = x.upper() in word_b.upper()\n",
+    "        if a == False:\n",
+    "            return False \n",
+    "            break \n",
+    "      return True  \n",
+    "    else:    #when it is case sensitive\n",
+    "      for x in word_a:\n",
+    "        a = x in word_b\n",
+    "        if a == False:\n",
+    "            return False \n",
+    "            break \n",
+    "      return True\n",
     "\n",
+    "  else: \n",
+    "    return False\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Slient\", \"listen\", False) # True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Slient\", \"Listen\", True) # False"
    ]
@@ -144,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
