--- a/02_assignments/assignment_1.ipynb
+++ b/02_assignments/assignment_1.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -148,30 +148,51 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "def f_anagram_checker(word_a,word_b):\n",
+    "  for x in word_a:   # using for loop to iterate characters from word_a to word_b\n",
+    "      a = x in word_b\n",
+    "      if a == False:\n",
+    "          return False \n",
+    "          break \n",
+    "  return True  \n",
+    "  \n",
+    "f_anagram_checker(\"taru\", \"nurat\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
     "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
     "  # Modify your existing code here\n",
     "  if len(word_a)==len(word_b):   #checking the length of two words if same or not\n",
     "    if not is_case_sensitive:   #when it is not case sensitive\n",
-    "      for x in word_a:   # using for loop to iterate characters from word_a to word_b\n",
-    "        a = x.upper() in word_b.upper()\n",
-    "        if a == False:\n",
-    "            return False \n",
-    "            break \n",
-    "      return True  \n",
+    "      word_a = word_a.upper()\n",
+    "      word_b = word_b.upper()\n",
+    "      return f_anagram_checker(word_a, word_b)  \n",
     "    else:    #when it is case sensitive\n",
-    "      for x in word_a:\n",
-    "        a = x in word_b\n",
-    "        if a == False:\n",
-    "            return False \n",
-    "            break \n",
-    "      return True\n",
-    "\n",
+    "      return f_anagram_checker(word_a, word_b)  \n",
     "  else: \n",
     "    return False\n",
     "# Run your code to check using the words below:\n",
@@ -180,7 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +217,7 @@
        "False"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
