added a markdown for understanding

--- a/02_assignments/assignment_1.ipynb
+++ b/02_assignments/assignment_1.ipynb
@@ -138,6 +138,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding a new function to separate the functionality of checking the anagram. This is done to make the code easy to read "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -201,10 +208,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker(\"\", \" \", False) # True"
+   ]
   },
   {
    "cell_type": "code",
