correction to assignment

--- a/02_assignments/assignment_1.ipynb
+++ b/02_assignments/assignment_1.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "True"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,15 +74,7 @@
     "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
     "def anagram_checker(word_a, word_b):\n",
     "  # Your code here\n",
-    "  if len(word_a)==len(word_b):   #checking the length of two words if same or not\n",
-    "    for x in word_a:     # using for loop to iterate characters from word_a to word_b\n",
-    "      a = x.upper() in word_b.upper() #creating a boolean variable and assigning the result of check\n",
-    "      if a == False:\n",
-    "          return False \n",
-    "          break   #break is added to end the loop if we get one false\n",
-    "    return True  # all characters match \n",
-    "  else: \n",
-    "    return False  #count doesn't match so returning false\n",
+    "  return sorted(word_a.lower()) == sorted(word_b.lower())\n",
     "      \n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Slient\", \"listen\")"
@@ -90,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +91,7 @@
        "False"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +111,7 @@
        "True"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -183,32 +175,27 @@
        "True"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "\n",
     "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
     "  # Modify your existing code here\n",
-    "  if len(word_a)==len(word_b):   #checking the length of two words if same or not\n",
     "    if not is_case_sensitive:   #when it is not case sensitive\n",
-    "      word_a = word_a.upper()\n",
-    "      word_b = word_b.upper()\n",
-    "      return f_anagram_checker(word_a, word_b)  \n",
+    "      return sorted(word_a.lower()) == sorted(word_b.lower())\n",
     "    else:    #when it is case sensitive\n",
-    "      return f_anagram_checker(word_a, word_b)  \n",
-    "  else: \n",
-    "    return False\n",
+    "      return sorted(word_a) == sorted(word_b) \n",
+    " \n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Slient\", \"listen\", False) # True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -217,33 +204,33 @@
        "False"
       ]
      },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "anagram_checker(\"\", \" \", False) # True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "anagram_checker(\"Slient\", \"Listen\", True) # False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker('tinku', 'Uknit', True)"
    ]
   },
   {
